Fix Forge resource not loading in cleanroomClient